# query-challenge

./: .gitignore  .gitmodules  README.md  bootstrap.sh  query-challenge-uml-http-draw.io.xml
examples/: Scheme.json
ideprojects/: query-challenge.sln
ideprojects/Datastore/: Datastore.vcxproj  Datastore.vcxproj.filters
ideprojects/Import/: Import.vcxproj  Import.vcxproj.filters
ideprojects/Query/: Query.vcxproj  Query.vcxproj.filters  main.cpp
ideprojects/tests/: TestDate.cpp  TestTime.cpp  tests.vcxproj  tests.vcxproj.filters
src/: CMakeLists.txt  Resource  rapidjson  tclap
src/datastore/: CMakeLists.txt  DataStorage.h  Database.cpp  Database.h  FieldDescriptor.cpp  FieldDescriptor.h  FieldType.cpp  FieldType.h  FieldValue.h  IField.h  JsonStorage.cpp  JsonStorage.h  Logic.cpp  Logic.h  PointerType.h  Row.h  Scheme.cpp  Scheme.h  Selection.cpp  Selection.h  Storage.h  Value.h
src/datastore/tests/: TestDatabase.cpp  TestScheme.cpp  TestTime.cpp
src/import/: CMakeLists.txt  main.cpp
src/query/: CMakeLists.txt  main.cpp
